Fix splash page background image aligning with category images

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,11 +1,12 @@
 .footer-main {
     background-color: #f5f5f5;
     margin-top: 100px;
-    border: 1px solid #cccccc;
+    border-top: 1px solid #cccccc;
     padding: 50px 150px 0 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width: 1300px;
 }
 
 .contact-logo-group {
